--- a/answers/1.5
+++ b/answers/1.5
@@ -1,1 +1,1 @@
-docker run -p 5000:8080 -e CURRENT_ENVIRONMENT=development christelleimage
+docker run -p 5000:8080 -d -e environment=development christelleimage
