--- a/answers/1.6
+++ b/answers/1.6
@@ -1,1 +1,3 @@
-docker push christellelvk/docker_lab_christelle:latest
+docker tag christelleimage:latest christellelvk/td3mlops:tagname 
+docker login
+docker push christellelvk/td3mlops:tagname
